Refactoring : SonarQube Code Smells 수정 - 3(#47)